<resources>
    <string name="estimated_reach_1_6k_4k_people_per_day">Estimated reach 1.6k-4k people per day</string>
    <string name="apply_changes">Change</string>
    <string name="estimated_reach_1k_4k_people_per_day" />
    <string name="collection_and_use_of_data_google_may_collect_and_use_your_data_including_your_location_search_history_and_app_usage_to_improve_our_services_and_provide_you_with_personalized_experiences_sharing_of_data_google_may_share_your_data_with_trusted_partners_and_affiliates_to_enhance_the_services_we_offer_privacy_policy_by_enabling_google_services_you_agree_to_our_privacy_policy_which_outlines_how_we_collect_use_and_share_your_data_to_confirm_your_consent_and_enable_google_services_please_follow_these_steps_tap_on_the_button_below_review_the_terms_and_conditions_carefully_if_you_agree_to_the_terms_tap_on_the_confirm_button_if_you_do_not_agree_to_the_terms_and_conditions_please_tap_on_the_cancel_button_please_note_that_enabling_google_services_is_essential_to_access_certain_features_and_functionalities_of_your_device_and_apps_for_more_information_please_visit_our_privacy_policy_at_link_to_privacy_policy_sincerely_the_google_team_p_s_if_you_have_any_questions_or_concerns_please_do_not_hesitate_to_contact_our_support_team">Collection and Use of Data: Google may collect and use your data, including your location, search history, and app usage, to improve our services and provide you with personalized experiences. Sharing of Data: Google may share your data with trusted partners and affiliates to enhance the services we offer. Privacy Policy: By enabling Google services, you agree to our Privacy Policy, which outlines how we collect, use, and share your data. To confirm your consent and enable Google services, please follow these steps: Tap on the button below. Review the terms and conditions carefully. If you agree to the terms, tap on the Confirm button. If you do not agree to the terms and conditions, please tap on the Cancel button. Please note that enabling Google services is essential to access certain features and functionalities of your device and apps. For more information, please visit our Privacy Policy at [link to Privacy Policy]. Sincerely, The Google Team P.S If you have any questions or concerns,please do not hesitate to contact our support team.</string>
    <string name="by_enabling_location_settings_you_consent_to_the_collection_use_and_sharing_of_your_location_data_in_accordance_with_our_privacy_policy_please_review_our_privacy_policy_for_more_information">By enabling location settings, you consent to the collection, use, and sharing of your location data in accordance with our Privacy Policy. Please review our Privacy Policy for more information.</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="agree_and_continue">AGREE</string>
    <string name="i_agree_with_flash_policy">I agree with flash policy</string>
    <string name="todo">TODO</string>
    <string name="What_are_you_looking_for_on_the_market" />
    <string name="customer_interests">Customer Interests</string>
    <string name="what_is_your_product">Select category</string>
    <string name="product">Product</string>
    <string name="submit">Submit</string>
    <string name="save">Proceed</string>
    <string name="your_profile_has_been_successfully_created">Your profile has been successfully created!!!. You have selected an amount of MK1000 per month, click NEXT and proceed to payment.</string>
    <string name="your_profile_has_been_successfully" />
    <string name="you_have_selected_amount_of_mk_1000_per_month_click_next_to_proceed_to_payment">You have selected amount of MK 1000 per month Click next to proceed to payment</string>
    <string name="fullscreen_image_desc">fullscreen_image_desc</string>
    <string name="seller_information">Seller Information</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="ayscut_business">AYSCUT BUSINESS</string>
    <string name="ayscut_Business">ayscut\n</string>
    <string name="is_this_item_available">Is this Item available</string>
    <string name="business_information">Business Information</string>
    <string name="pick_images">Pick Images</string>
    <string name="create_delete_and_view_catalogues_for_your_business">Create, Delete, Edit and View Catalogues for your business</string>
    <string name="repost">Repost</string>
    <string name="by_enabling_this_feature_every_customer_using_flash_app_will_be_receiving_a_notification_with_a_radius_of_5_meters_depending_on_your_current_location_this_will_make_it_easier_to_advertise_your_business_everywhere_you_go">By enabling this feature, every customer using Flash App will be receiving a notification with a radius of 5 meters depending on your current location. This will make it easier to advertise your business everywhere you go.</string>
    <string name="enable_walking_billboard">Enable walking billboard.</string>
    <string name="tag_where_your_business_is_situated_this_information_can_be_used_for_various_purposes_including_advertising_and_reaching_out_to_potential_customers_in_that_area">Tag where your business is situated. This information can be used for various purposes, including advertising and reaching out to potential customers in that area.</string>
    <string name="tag_your_business_location">Tag your business location.</string>
    <string name="location">location</string>
    <string name="what_s_your_contact_details">what\'s your contact details ?</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="describe_your_business">describe your business</string>
    <string name="business_description">Business description</string>
    <string name="what_s_your_business_profession_type">What\'s your business / profession type?</string>
    <string name="business_profession_type">Business/Profession Type</string>
    <string name="whats_your_business_profession_name">whats your business/profession name ?</string>
    <string name="business_profession">Business/Profession</string>
    <string name="upload_profession_profile">upload profession profile</string>
    <string name="getting_your_current_location_nplease_wait">Getting your current location\nPlease wait...</string>
    <string name="boost">Boost</string>
    <string name="mwk">MWK</string>
    <string name="offer_price">Offer price</string>
    <string name="be_the_first_to_comment">Be the first to comment</string>
    <string name="test_message">This is a test Message</string>
    <string name="app_name">Circuit</string>
    <string name="user_name">Username</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="block_user">Block User</string>
    <string name="login">Login</string>
    <string name="uyscuti">UY SCUTI Technologies</string>
    <string name="register">Register</string>
    <string name="loginSuggestion">Already have an account?</string>
    <string name="registerSuggestion">Don\'t have an account?</string>
    <string name="image_item">Image Item</string>
    <string name="calls">Hello from calls fragment</string>
    <string name="groups">Hello from group chats fragment</string>
    <string name="persinal">Hello from personal chats  fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_fragment">Hello chat</string>
    <string name="feed_fragment">Hello from feeds</string>
    <string name="shots_fragment">Hello from shots</string>
    <string name="default_repost_hashtags">#Repost #ProudMoment #Innovation</string>
    <string name="default_user_name">User</string>
    <string name="default_user_handle">user</string>
    <string name="repost_button_text">Repost</string>
    <string name="repost_title">Repost</string>
    <string name="add_comment_hint">Add a comment</string>
    <string name="unknown_user">Unknown User</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">{count}m ago</string>
    <string name="hours_ago">{count}h ago</string>
    <string name="days_ago">{count}d ago</string>
    <string name="weeks_ago">{count}w ago</string>
    <string name="please_add_content">Please add some content to repost</string>
    <string name="repost_success">Repost created successfully!</string>
    <string name="repost_failed">Failed to create repost. Please try again.</string>
    <string name="attach_image_clicked">Attach Image clicked</string>
    <string name="attach_gif_clicked">Attach GIF clicked</string>
    <string name="create_poll_clicked">Create Poll clicked</string>
    <string name="emoji_picker_clicked">Emoji Picker clicked</string>
    <string name="schedule_post_clicked">Schedule Post clicked</string>
    <string name="more_options_clicked">More Options clicked</string>
    <string name="original_post_clicked">Original Post clicked</string>
    <string name="view">View</string>
    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>
    <string name="hint_enter_a_message">Message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
    <string name="content_description_share">Share</string>
    <string name="content_description_delete">Delete Chat Dialog</string>
    <string name="content_description_more">More</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="search_v2">Search...</string>
    <string name="clear_search">Clear search</string>
    <string name="category">Category</string>
</resources>